--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Document</title>
-</head>
 
-<body>
+    <style>
+      p {
+        color: purple;
+      }
+    </style>
+  </head>
+
+  <body>
     <p>This is my document!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ducimus? Iusto pariatur temporibus cumque
-        delectus ab omnis officiis animi laboriosam nam est maiores nostrum qui ea aut voluptatum, culpa eligendi!
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ducimus?
+      Iusto pariatur temporibus cumque delectus ab omnis officiis animi
+      laboriosam nam est maiores nostrum qui ea aut voluptatum, culpa eligendi!
     </p>
-</body>
-
+  </body>
 </html>
